[gd_scene load_steps=6 format=3 uid="uid://streaming_sample"]

[ext_resource type="Script" path="res://samples/streaming_sample.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="StreamingSample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 500, 500)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="TileContainer" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ImportPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 170.0

[node name="Title" type="Label" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 25.0
text = "Streaming Loader"
horizontal_alignment = 1

[node name="SelectFolderButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 35.0
offset_right = 230.0
offset_bottom = 65.0
text = "Select Dataset Folder..."

[node name="RadiusLabel" type="Label" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 75.0
offset_right = 120.0
offset_bottom = 95.0
text = "Load Radius:"

[node name="RadiusSpin" type="SpinBox" parent="UI/ImportPanel"]
offset_left = 125.0
offset_top = 73.0
offset_right = 230.0
offset_bottom = 97.0
min_value = 0.0
max_value = 3.0
value = 1.0

[node name="ClearButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 110.0
offset_right = 230.0
offset_bottom = 145.0
text = "Clear All Tiles"

[node name="StatusPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 180.0
offset_right = 250.0
offset_bottom = 290.0

[node name="Title" type="Label" parent="UI/StatusPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 230.0
offset_bottom = 25.0
text = "Status"
horizontal_alignment = 1

[node name="MeshCodeLabel" type="Label" parent="UI/StatusPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 50.0
text = "Current: -"

[node name="LoadedLabel" type="Label" parent="UI/StatusPanel"]
offset_left = 10.0
offset_top = 55.0
offset_right = 230.0
offset_bottom = 75.0
text = "Loaded: 0 tiles"

[node name="StatusLabel" type="Label" parent="UI/StatusPanel"]
offset_left = 10.0
offset_top = 80.0
offset_right = 230.0
offset_bottom = 100.0
text = ""

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 25.0
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 400.0
offset_bottom = -10.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
fit_content = true
scroll_following = true
